# PromptCopilot

./: README.md  init.bat  init.sh  pyproject.toml  start.bat  start.sh
docs/: draft.md
etc/: config.yaml
promptcopilot.egg-info/: PKG-INFO  SOURCES.txt
src/: app.py
src/static/: app.js  i18n.js  style.css
src/templates/: index.html
