[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "promptcopilot"
version = "0.1.0"
description = "Prompt standardization tool"
requires-python = ">=3.12"
dependencies = [
    "flask",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
